# lewidi_2023

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
code/: DataManager.py  classifier_lewidi.py  debug.py  params_lewidi.py  run_lewdidi  run_lewidi  test_main.ipynb
code/utils/: ConvAbuse_train.json  data_loader.py  snippets.py
configs/: train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: default.yaml  multi_task.yaml  single_task.yaml
configs/data/dataloader/: default.yaml
configs/data/dataset/: armis.yaml  conv_abuse.yaml  hs_brexit.yaml  md_agreement.yaml
configs/experiment/: single_task_conv_abuse.yaml
configs/loggers/: wandb.yaml
configs/model/: default.yaml  multi_task.yaml  single_task.yaml
configs/paths/: default.yaml
configs/tokenizer/: arabert.yaml  bert.yaml  tfidf.yaml
configs/trainer/: default.yaml
data/: resultsArMIS_results.tsv  resultsConvAbuse_results.tsv  resultsHS-Brexit_results.tsv  resultsMD-Agreement_results.tsv
data/ArMIS_dataset/: ArMIS_test.json
data/ConvAbuse_dataset/: ConvAbuse_test.json
data/HS-Brexit_dataset/: HS-Brexit_test.json
data/MD-Agreement_dataset/: MD-Agreement_test.json
data/results/: ArMIS_results.tsv  ConvAbuse_results.tsv  HS-Brexit_results.tsv  MD-Agreement_results.tsv
outputs/2023-02-27/19-18-17/.hydra/: config.yaml  hydra.yaml
src/lewidi/: __main__.py  datamodule.py  datasets.py  modelling_params.py  run_svm.py
src/lewidi/common/: instantiate.py
src/lewidi/data/: __init__.py  datamodules.py  model_instance.py  tokenizers.py
src/lewidi/data/datasets/: __init__.py  constants.py  dataset_instance.py
src/lewidi/datasets/: __init__.py  constants.py  instance.py  instance_loader.py
src/lewidi/models/: __init__.py  multi_task.py  single_task.py  svm.py
src/lewidi/models/components/: __init__.py  heads.py  metrics.py
storage/data/raw/ArMIS/: ArMIS_dev.json  ArMIS_test.json  ArMIS_train.json
storage/data/raw/ConvAbuse/: ConvAbuse_dev.json  ConvAbuse_test.json
storage/data/raw/HS-Brexit/: HS-Brexit_dev.json  HS-Brexit_test.json  HS-Brexit_train.json
storage/data/raw/MD-Agreement/: MD-Agreement_dev.json  MD-Agreement_test.json  MD-Agreement_train.json
tests/: conftest.py
tests/models/: test_model_heads.py
utils/: data_loader.py
